# machine-learning-azav-de

./: .gitattributes  .gitignore  Installation-Windows.md  README.md
Code/BoardgameNight/: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
Code/BoardgameNight/.claude/: settings.json
Code/BoardgameNight/.github/: copilot-instructions.md
Code/BoardgameNight/docs/: FEATURE_IMPLEMENTATION_GUIDE.md
Code/BoardgameNight/src/boardgame_night/: __init__.py
Code/BoardgameNight/tests/: __init__.py  conftest.py  test_placeholder.py
Code/CopilotAdvancedDemo/: .gitignore  README.md  pyproject.toml
Code/CopilotAdvancedDemo/.github/: copilot-instructions.md
Code/CopilotAdvancedDemo/.github/prompts/: add-unit-tests.prompt.md
Code/CopilotAdvancedDemo/src/copilot_advanced_demo/: __init__.py  cli.py  config.py  dashboard.py  data_processor.py  weather_api.py
Code/CopilotAdvancedDemo/tests/: conftest.py  test_cli.py  test_dashboard.py  test_integration.py  test_weather_api.py
Code/CopilotStarterKit/: README.md  data_processor.py  exercises.py
Code/CopilotWorkshopStarterKit/: README.md
Code/CopilotWorkshopStarterKit/.github/: copilot-instructions.md
Code/CopilotWorkshopStarterKit/src/: __init__.py  book_api.py  config.py  library.py  member_manager.py
Code/CopilotWorkshopStarterKit/tests/: test_book_api.py
Folien/Html/Code-Along/01 Kursüberblick und Einführung/: 02 Was ist Künstliche Intelligenz.html  03 Was ist Maschinelles Lernen.html  04 Workshop Eiscreme.html  create_data.py
Folien/Html/Code-Along/01 Kursüberblick und Vorbereitung/: 01 Kursübersicht.html  02 Einführung in Web Services.html  03 Das requests Package.html  04 Spezialisierte API Bibliotheken.html
Folien/Html/Code-Along/02 Einführung in maschinelles Lernen/: 01 Einführung ins Maschinelle Lernen.html  02 Programm vs Modell.html  02 War das wirklich ML.html  03 Mehr zum Trainingsprozess.html  03 Überwachtes Lernen Grundlagen.html  04 Modell Training Praxis.html  04 Warum Test_Train-Split.html  04 Warum Train_Test-Split.html  04 Was kann schiefgehen.html  05 Eigene Modelle Implementieren.html  05 Klassifizierung von ML-Ansätzen.html  06 Lineare Regression.html  06 Overfitting und Generalisierung.html  07 Lineare Regression mit Scikit-Learn.html  08 Lineare Regression.html  08 Multivariate Lineare Regression.html  create_data.py  student_grades.csv
Folien/Html/Code-Along/03 Deep Dive Lineare Regression/: 01 Multivariate Vorhersagen verstehen.html  02 Einführung in Vektoren und NumPy.html  03 Das Skalarprodukt - Herz der Linearen Regression.html  04 Von Einem zu Vielen - Einführung in Matrizen.html  05 Unser eigenes lineares Regressionsmodell.html  06 Matrix-Multiplikation.html  06 Wie Modelle lernen - Optimale Koeffizienten finden.html  07 Matrix-Inversion und Gleichungssysteme.html  08 Matrix-Inversion und Gleichungssysteme.html  08 Wie Modelle lernen - Optimale Koeffizienten finden.html  09 Wie Modelle lernen - Optimale Koeffizienten finden.html  display_utils.py  install_packages.py  plot_utils.py
Folien/Html/Code-Along/03 Neuronale Netze/: 05 Grenzen linearer Modelle.html  08 Unser erstes neuronales Netz trainieren.html
Folien/Html/Code-Along/04 Large Language Models/: 01 Was sind Large Language Models.html  02 Prompt Engineering.html  07 Gradio Benutzeroberflächen für ML.html  08 Gradio Chatbot Interface.html  09 Gradio LLM Chatbot.html
Folien/Html/Code-Along/04 Neuronale Netze/: 06 Das Neuron.html  07 Neuronale Netze aufbauen.html  09 Grenzen linearer Modelle.html  09 Workshop Erste Neuronale Netze.html  10 Wie lernt ein neuronales Netz.html  11 Gradientenabstieg.html  11 Neuronale Netze aufbauen.html  12 Training in der Praxis.html  12 Unser erstes neuronales Netz trainieren.html  13 Von Neuronalen Netzen zu Large Language Models.html  13 Workshop Erste Neuronale Netze.html  14 Training Neuronaler Netze Grundlagen.html  15 Von Neuronalen Netzen zu Large Language Models.html  nn_training_essentials_plots.py  plot_utils.py
Folien/Html/Code-Along/04 Neuronale Netze und Large Language Models/: 01 Warum NumPy - Einführung in Vektoren.html  02 Rechnen mit Vektoren.html  03 Einführung in Matrizen.html  04 Rechnen mit Matrizen.html  05 Grenzen linearer Modelle.html  06 Das Neuron.html  07 Neuronale Netze aufbauen.html  08 Unser erstes neuronales Netz trainieren.html  09 Workshop Erste Neuronale Netze.html
Folien/Html/Code-Along/05 Large Language Models, APIs und LangChain/: 01 Was sind Large Language Models.html  02 Prompt Engineering.html  03 LLM APIs Einführung.html  03 LLM APIs nutzen.html  04 LLM APIs mit requests.html  05 Die OpenAI Python-Bibliothek.html  05 Ein einfacher Chatbot mit REST API.html  06 Die OpenAI Python-Bibliothek.html  (+11 more)
Projekte/SimpleLangChainChatbot/: README.md  main.py  pyproject.toml
Projekte/SimpleLangChainChatbotStarterKit/: README.md  main.py  pyproject.toml
(+707 files in other folders)
