[project]
name = "simplelangchainchatbotstarterkit"
version = "0.1.0"
description = "Starter Kit for a Simple LangChain Chatbot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "gradio>=6.3.0",
    "langchain>=1.2.6",
    "langchain-anthropic>=1.3.1",
    "langchain-core>=1.2.7",
    "langchain-openai>=1.1.7",
]
